--- a/src/App.css
+++ b/src/App.css
@@ -138,6 +138,29 @@ body {
     min-width: 25%;
 }
 
+.Buttonarithm {
+    background: orange;
+    /* Old browsers */
+    background: -moz-linear-gradient(45deg, #cad2c5 0%, #abb5aa 100%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(45deg, #cad2c5 0%, #abb5aa 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(45deg, #cad2c5 0%, #abb5aa 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#cad2c5', endColorstr='#abb5aa', GradientType=1);
+    /* IE6-9 fallback on horizontal gradient */
+    display: flex;
+    box-sizing: border-box;
+    border: 1px solid rgba(0, 0, 0, 0.05);
+    align-items: center;
+    justify-content: center;
+    width: 25%;
+    font-size: 24px;
+    color: rgba(0, 0, 0, 0.5);
+    height: 20%;
+    min-width: 25%;
+}
+
 .Button[data-size="2"] {
     height: 40%;
 }
